[project]
name = "owleye"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
]

[project.scripts]
owleye = "owleye:main"

[tool.uv]
package = true
